[tool.poetry]
name = "scremsong"
version = "0.1.0"
description = ""
authors = ["Keith Moss <keithamoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.1.7"
psycopg2-binary = "2.9.5"
djangorestframework = "3.14.0"
django-cors-headers = "3.14.0"
django-model-utils = "4.3.1"
sqlalchemy = "2.0.7"
social-auth-app-django = "5.1.0"
social-auth-core = "4.4.0"
sentry-sdk = "1.17.0"
redis = "4.5.3"
tweepy = "4.13.0"
django-celery-results = "2.5.0"
daphne = "4.0.0"
sh = "1.14.3"
channels = "4.0.0"
channels-redis = "4.0.0"
celery = "5.2.7"
gevent = "22.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"