[tool.poetry]
name = "scremsong"
version = "0.1.0"
description = ""
authors = ["Keith Moss <keithamoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.2.1"
psycopg2-binary = "2.9.6"
djangorestframework = "3.14.0"
django-cors-headers = "4.0.0"
django-model-utils = "4.3.1"
sqlalchemy = "2.0.12"
social-auth-app-django = "5.2.0"
social-auth-core = "4.4.2"
sentry-sdk = "1.22.2"
redis = "4.5.4"
tweepy = "4.14.0"
django-celery-results = "2.5.1"
daphne = "4.0.0"
sh = "1.14.3"
channels = "4.0.0"
channels-redis = "4.1.0"
celery = "5.2.7"
gevent = "22.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"