[tool.poetry]
name = "scremsong"
version = "0.1.0"
description = ""
authors = ["Keith Moss <keithamoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.2.6"
psycopg2-binary = "2.9.9"
djangorestframework = "3.14.0"
django-cors-headers = "4.3.0"
django-model-utils = "4.3.1"
sqlalchemy = "2.0.21"
social-auth-app-django = "5.3.0"
social-auth-core = "4.4.2"
sentry-sdk = "1.31.0"
redis = "5.0.1"
tweepy = "4.14.0"
django-celery-results = "2.5.1"
daphne = "4.0.0"
sh = "1.14.3"
channels = "4.0.0"
channels-redis = "4.1.0"
celery = "5.3.4"
gevent = "23.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"